--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ bootstrap/compiled.php
 app/storage/
 
 # Laravel 5 & Lumen specific
+public/storage
 public/hot
 
 # Laravel 5 & Lumen specific with changed public path
@@ -26,7 +27,7 @@ Homestead.json
 /node_modules
 /public/build
 /public/hot
-
+/public/storage
 /storage/*.key
 /vendor
 .env
